# hawplan

./: LOGBOOK.md  README.md  SYSTEM.md  TODO.md  main.py  pyproject.toml  run.py
.github/workflows/: deploy.yml  scrape.yml
public/: global.css  index.html
public/data/: tree.json
public/data/groups/: 10.json  101.json  108.json  110.json  112.json  115.json  117.json  122.json  124.json  128.json  13.json  130.json  133.json  134.json  135.json  138.json  139.json  15.json  152.json  153.json  154.json  155.json  156.json  157.json  158.json  159.json  160.json  161.json  162.json  163.json  164.json  165.json  166.json  167.json  168.json  169.json  17.json  170.json  171.json  172.json  (+134 more)
public/js/: app-shell.js  course-picker.js  helpers.js  ics.js  login-view.js  schedule-list.js  shared-styles.js  step-credentials.js  step-done.js  step-events.js  timetable-view.js  week-grid.js
scripts/: scrape.py
